Bug 19209 - src/cairo-quartz-font.c:146: Memory leak: full_name
Summary: src/cairo-quartz-font.c:146: Memory leak: full_name
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.1
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-20 11:11 UTC by dvice_null
Modified: 2008-12-20 11:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description dvice_null 2008-12-20 11:11:06 UTC
This was found from the latest git version.

In file src/cairo-quartz-font.c:146: 
Variable full_name leaks memory when this "if" is executed:

    if (! _cairo_quartz_font_symbols_present)
	return _cairo_error (CAIRO_STATUS_NO_MEMORY);

This bug was found using cppcheck: http://cppcheck.wiki.sourceforge.net/
Comment 1 Chris Wilson 2008-12-20 11:18:45 UTC
Fixed applied to local tree.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.